# nl-power-outage-history

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml  scrape.yml
src/: main.rs
src/nl_power_outage_history/: __init__.py
